--- a/package.json
+++ b/package.json
@@ -6,8 +6,17 @@
     "test-server": "mocha --colors --watch --recursive './test/**/*.test.js'",
     "test": "mocha --colors --recursive './test/**/*.test.js'"
   },
-  "main": "./src/index.js",
-  "keywords": [],
+  "main": "./src/waterfall.js",
+  "keywords": [
+    "atlassubbed",
+    "async",
+    "waterfall",
+    "series",
+    "serial",
+    "utils",
+    "utility",
+    "helpers"
+  ],
   "author": "atlassubbed <atlassubbed@gmail.com>",
   "license": "Apache-2.0",
   "devDependencies": {
