--- a/package.json
+++ b/package.json
@@ -30,5 +30,11 @@
   "engines": {
     "node": "^10.1.0",
     "npm": "^6.0.1"
+  },
+  "homepage": "https://github.com/atlassubbed/atlas-waterfall#readme",
+  "bugs": "https://github.com/atlassubbed/atlas-waterfall/issues",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/atlassubbed/atlas-waterfall.git"
   }
 }
